# hdb_sbf_analytics

./: .gitignore  README.md  dashboard.py  pyproject.toml  requirements.txt  scrap_data.py
data/: SBF_application_status.csv  SBF_application_status_0528_1255.csv  SBF_block_info.csv  SBF_flat_supply_info.csv  SBF_project_info.csv  SBF_project_info_v2.csv  SBF_seed_links.csv
notebooks/: application_number.ipynb  combine_data.ipynb  scrap_all.ipynb  scrap_application_status.ipynb  scrap_sbf_project_additional_details.ipynb
src/: constants.py  process_data.py  query.py  utils.py
src/dashboard/: data.py  sidebar.py  utils.py
src/dashboard/pages/: pairwise.py  summary.py
src/web_scrap/: application_info.py
