[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Chew Ze Yong <gavinchew92@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7.1"
pandas = "1.2.4"
ipykernel = "^5.5.5"
beautifulsoup4 = "^4.9.3"
matplotlib = "^3.4.2"
streamlit = "^0.82.0"
requests-html = "^0.10.0"
selenium = "^3.141.0"
tqdm = "^4.61.0"
websockets = "9.1"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.7"
flake8 = "^3.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
